individualComponents/WindowsLogon/BLESample/BLEDLLV2/BLEDLLV2_2.h

BLEDLLV2_API IMiTokenBLE* WINAPI MiTokenBLE_CreateInterfaceOfVersion(int versionID);
BLEDLLV2_API BLE_API_RET WINAPI MiTokenBLEV2_2_AppendCommandChainLink(IMiTokenBLEV2_2* instance, IBLE_COMMAND_CHAIN_LINK* pCommandChain, bool checkAndRemoveDuplicatePointers);
BLEDLLV2_API void WINAPI MiTokenBLEV2_2_ForceUnsafeDisconnection(IMiTokenBLEV2_2* instance, uint8 connectionHandle);
BLEDLLV2_API BLE_API_RET WINAPI MiTokenBLEV2_2_EnableNonUniqueAttributeUUIDMode(IMiTokenBLEV2_2* instance);
BLEDLLV2_API IBLE_COMMAND_CHAIN_LINK* WINAPI MiTokenBLEV2_2_CreateNewCommandChainLinkObject(int& objectSize);
BLEDLLV2_API void WINAPI MiTokenBLEV2_2_DeleteCommandChainLinkObject(IBLE_COMMAND_CHAIN_LINK* object);
BLEDLLV2_API IMiTokenBLEV2_2* WINAPI MiTokenBLEV2_2_GetV2_2_Interface(IMiTokenBLE* V2_1Interface);
BLEDLLV2_API int WINAPI MiTokenBLEV2_2_Inner_GetChainPointerOffset(IBLE_COMMAND_CHAIN_LINK* object);
BLEDLLV2_API BLE_CONN_RET WINAPI MiTokenBLEV2_2_CONN_SyncReadAttribute(IMiTokenBLEConnectionV2_2* instance, const ATTRIBUTE_HANDLE handle, bool longRead, uint8* length, uint8** data, uint8* (__stdcall *allocator) (uint8 requiredLength), void (__stdcall *deallocator) (uint8* pointer), int timeout);
BLEDLLV2_API BLE_CONN_RET WINAPI MiTokenBLEV2_2_CONN_SyncWaitForState(IMiTokenBLEConnectionV2_2* instance, const ATTRIBUTE_HANDLE handle, bool longRead, const uint8* stateList, const uint8 stateCount, const uint8 stateLength, uint8* (__stdcall *allocator) (uint8 requiredLength), void (__stdcall *deallocator) (uint8* pointer), int timeout);
BLEDLLV2_API BLE_CONN_RET WINAPI MiTokenBLEV2_2_CONN_ReadAttributeFromCharHandle(IMiTokenBLEConnectionV2_2* instance, CHARACTERISTIC_HANDLE handle, uint8& length, uint8*&data, uint8* (__stdcall *allocator) (uint8 requiredLength), void (__stdcall *deallocator) (uint8* value));
BLEDLLV2_API BLE_CONN_RET WINAPI MiTokenBLEV2_2_CONN_SyncReadAttributeFromCharHandle(IMiTokenBLEConnectionV2_2* instance, CHARACTERISTIC_HANDLE handle, uint8& length, uint8*&data, uint8* (__stdcall *allocator) (uint8 requiredLength), void (__stdcall *deallocator) (uint8* value), int timeout);